Added visual design and flow to the form

--- a/index.html
+++ b/index.html
@@ -10,55 +10,66 @@
 <body>
   <!-- partial:index.partial.html -->
   <main id="main">
-    <h1 id="title">Volunteer Study Buddy</h1>
-    <div class="flex-container">
-      <div class="form-div">
-        <p id="description">Register Your Interest</p>
+    <h1 id="title">Piano Lessons</h1>
+    <p id="description">Thank you for taking interest in our piano lesson offerings.<br>
+      Please answer a few questions for us to better understand what you are after.</p>
+    <br><br>
+    <div class="form-div">
+      <form id="survey-form" action="https://www.test.com">
+        <div class="name-group">
+          <label for="name" id="name-label">Name:</label>
+          <input id="name" type="text" placeholder="e.g. Joe Bloggs" required>
+        </div>
+        <br>
+        <div class="email-group">
+          <label for="email" id="email-label">Email Address:</label>
+          <input id="email" type="email" placeholder="someone@example.com" required>
+        </div>
+        <br>
+        <div class="number-group">
+          <label for="number" id="number-label">Age:</label>
+          <input id="number" type="number" placeholder="Please input your age between 16 - 120" min="5" max="120">
+        </div>
+        <br>
+        <div class="level-dropdown-group">
+          <label for="playing-level-dropdown">What is your current piano playing level?</label>
+          <input id="playing-level-dropdown" list="dropdown" name="list">
+          <datalist id="dropdown">
+            <option value="Haven't Started"></option>
+            <option value="Beginner"></option>
+            <option value="Intermediate"></option>
+            <option value="Advanced"></option>
+          </datalist>
+        </div>
+        <div class="text-area-group">
+          <label for="textArea">Provide more information:<textarea id="textArea" name="textArea" rows="4"
+              cols="50">Optional</textarea></label>
+        </div>
+        <br>
 
-        <form id="survey-form" action="https://www.test.com">
-          <div class="name-group">
-            <label for="name" id="name-label">Name:</label>
-            <input id="name" type="text" placeholder="e.g. Joe Bloggs" required>
-          </div>
-          <div class="email-group">
-            <label for="email" id="email-label">Email Address:</label>
-            <input id="email" type="email" placeholder="someone@example.com" required>
-          </div>
-          <div class="number-group">
-            <label for="number" id="number-label">Age:</label>
-            <input id="number" type="number" placeholder="Please input your age between 16 - 120" min="16" max="120">
-          </div>
-          <!--
-    <label for="radio">
-      <input id="radio1" type="radio" name="radio1-radio2">Radio
-    </label>
+
+        <label for="radio"> Preferred lesson size:
+          <input id="radio" type="radio" name="radio-lesson">Individual
+          <input id="radio" type="radio" name="radio-lesson"> Group (&#60;5)
+          <input id="radio" type="radio" name="radio-lesson"> Group (5-10)
+          <input id="radio" type="radio" name="radio-lesson"> Group (10+)
+        </label>
+        <br>
+        <!--
     <label for="checkbox"><input id="checkbox" type="checkbox" name="chkbox">Checkbox</label>
     -->
-          <input list="dropdown" name="list">
-          <datalist id="dropdown">
-            <option value="list 1"></option>
-            <option value="list 2"></option>
-            <option value="list 3"></option>
-            <label for="textArea"><textarea id="textArea" name="textArea" rows="4" cols="50">Optional</textarea>Provide
-              More Information:</label>
-          </datalist>
-
-
-          <button id="submit" type="submit">Submit</button>
-        </form>
-      </div>
-      <div class="info-div">
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-          tortor
-          quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-          Aenean
-          ultricies mi vitae est. Mauris placerat eleifend leo.
-          Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-          tortor
-          quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-          Aenean
-          ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-      </div>
+        <input list="dropdown-3" name="list">
+        <datalist id="dropdown-3">
+          <option value="list 1"></option>
+          <option value="list 2"></option>
+          <option value="list 3"></option>
+          <label for="textArea"><textarea id="textArea" name="textArea" rows="4" cols="50">Optional</textarea>Provide
+            More Information:</label>
+        </datalist>
+        <br>
+        <br>
+        <button id="submit" type="submit">Submit</button>
+      </form>
     </div>
 
   </main>
