Added media query for small screen devices

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <label><input name="goal" value="teach" type="checkbox" class="input-checkbox" />Teach others</label><br>
         <br>  
         <div class="text-area-group">
-          <label id="multitext-label" for="textArea">Brief information about you music journey:<textarea id="textArea" name="textArea" rows="4"
+          <label id="multitext-label" for="textArea">Brief information about your music journey:<textarea id="textArea" name="textArea" rows="4"
               cols="50">e.g. I started learning from YouTube tutorials about 3 years ago and would now like to play in a band. </textarea></label>
         </div>
         <br><br>
